--- a/Pavt_prez/pavt.tex
+++ b/Pavt_prez/pavt.tex
@@ -7,11 +7,30 @@
 \usepackage{multirow}
 \usepackage{array}
 \usepackage{comment} %подключение комментариев
-\usetheme{Dresden}
+%\usetheme{Dresden}
 
 % Для исходного кода:
 \usepackage{color} 
 \usepackage{listings} 
+
+\usetheme{Warsaw}
+\setbeamercovered{dynamic}
+
+\title[]%
+{Статический анализ кода пакетов прикладных программ для поиска протяженных
+        участков для замены на параллельный эквивалент}
+\author[А.Н.~Сальников, М.В.~Чернова]
+{
+    \underline{А.Н.~Сальников}\textsuperscript{1,2},
+               М.В.~Чернова\textsuperscript{1}
+}
+
+\institute{
+             ВМК МГУ имени М.В. Ломоносова\textsuperscript{1},\newline
+             ФИЦ ИУ РАН\textsuperscript{2},\newline
+}
+
+   \date{}
 
 \begin{document}
 
@@ -25,43 +44,69 @@ escapeinside={\%*}{*)}
 }
 
 \begin{frame}
-\begin{center}
-    \textsf{\bfseries
-       {\Large Статический анализ кода пакетов прикладных программ для поиска протяженных
-        участков для замены на параллельный эквивалент}
-    }\\[7mm]
-\end{center}
+	\titlepage
 \end{frame}
-
-
-
 
 
 
 
 \begin{frame}
 \frametitle{Введение}
-Вопрос о повышении эффективности работы существующего кода можно решать несколькими способами, например: 
 \begin{itemize}
-	\item Распараллеливание кода.
-	\item Адаптация кода под конкретную архитектуру путем замены некоторых фрагментов
-кода на другие более оптимальные реализации.
-	\item Рефакторинг кода.
+	\item В научной среде существует множество пакетов прикладных
+программ (ППП), активно использующихся в решении различных
+задач.
+	\item Ежегодная разработка новых программных продуктов вызывает
+устаревание некоторых программных решений, в частности
+отдельных частей в пакетах прикладных программ.
+	\item Возникает вопрос о повышении эффективности работы такого
+кода, а также о различных его модификациях с минимизацией
+затрат человеческого труда.
 \end{itemize}
 \end{frame}
 
 \begin{frame}
-\frametitle{Терминология}
+\frametitle{Идея работы}
 \begin{itemize}
-	\item \textit{Дубликаты} -- два функционально эквивалентных фрагмента кода.
-	\item Под \textit{методом} будет подразумеваться один из алгоритмических способов решения конкретной задачи.
-	\item Каждый метод может иметь несколько \textit{мотивов} – конкретных вариантов реализации, которые разрабатываются в зависимости от возможностей вычислительной системы и алгоритма, используемого разработчиком.
-	\item \textit{Код пакета прикладных программ} (код ППП) – реализация пакета прикладных про-
-грамм, в которой необходимо обнаружить дубликат искомого мотива.
-	\item \textit{Шаблон} -- искомый мотив, по которому непосредственно будет осуществляться поиск в коде ППП.
+	\item Создание системы выдачи рекомендаций пользователю о возможности замены
+	 некоторых фрагментов в пакете прикладных программ с целью дальнейшей оптимизации
+\end{itemize}
+
+\includegraphics[width=\textwidth]{img/idea.eps}
+\end{frame}
+
+\begin{frame}
+\frametitle{Подзадачи}
+\begin{itemize}
+	\item Создание коллекции реализаций часто используемых в ППП численных методов
+	\item Создание метода поиска в исходном коде фрагментов, функционально
+	 эквивалентных заданному
+	\item Создание коллекции целевых фрагментов с учетом различных характеристик
+	 «оптимальности». Под «оптимальностью» будем иметь в виду реализацию в
+	  соответствии с запросами пользователя (например, для конкретного окружения)
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+\frametitle{Цели и трудности решения}
+Цели: 
+\begin{itemize}
+	\item Найти в исходном коде ППП расположение фрагментов кода, функционально
+эквивалентных данному.
+	\item Иметь возможность находить не только фрагменты, идентичные искомому, но
+также имеющие расхождения по различному ряду признаков, таких как: имена
+переменных/функций, порядок расположения операторов, наличие или
+отсутствие некоторых операторов.
+\end{itemize}
+
+Трудности решения: 
+\begin{itemize}
+	\item Большой объем исходного кода, в котором должен производиться поиск
+(следовательно, трудность построения графа потока управления).
+	\item Нет однозначности при определении функциональной эквивалентности двух
+участков кода.
+\end{itemize}
+\end{frame}
 
 \begin{frame}
 \frametitle{Описание предлагаемого подхода}
@@ -74,7 +119,43 @@ escapeinside={\%*}{*)}
 \end{frame}
 
 \begin{frame}
-\frametitle{Создание базы исходного кода для поиска}
+\frametitle{Рассматриваемые ППП}
+\begin{itemize}
+	\item OpenFOAM  ---
+	 открытое программное обеспечение для численного моделирования задач механики
+	 сплошных сред. В основе кода лежит набор библиотек, предоставляющих инструменты
+	 для решения систем дифференциальных уравнений в частных производных. 
+\end{itemize}
+\begin{center}
+\includegraphics[width=0.7\textwidth]{img/openfoam.eps}
+\end{center}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Рассматриваемые ППП}
+\begin{itemize}
+	\item Gromacs  --- (groningen machine for chemical
+simulations --- гронингенская машина для химического моделирования) --- пакет
+ программдля моделирования физико-химических процессов в молекулярной динамике,
+  специализирующийся на моделировании биомолекул (например, молекул белков и липидов),
+   имеющих много связанных взаимодействий между атомами.
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Рассматриваемые ППП}
+\begin{itemize}
+	\item MPIESM(ECHAM6/MPIOM/JSBACH/HAMOCC) --- современная крупномасштабная
+    совместная модель <<океан-земля-атмосфера>> европейского метеорологического сообщества.
+\end{itemize}
+\begin{center}
+\includegraphics[width=0.7\textwidth]{img/mpiesm.png}
+\end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Характеристики пакетов прикладных программ}
 \renewcommand{\arraystretch}{1.8} %% increase table row spacing
 %\renewcommand{\tabcolsep}{0.3cm} 
 \begin{tabular}{|p{3.8cm}|c|c|c|}
@@ -152,7 +233,7 @@ escapeinside={\%*}{*)}
 \begin{itemize}
 	\item На данном этапе был выбран способ вычисления метрики схожести на основании  абстрактных синтаксических деревьев\footnote[1]{Baxter I. D. et al. Clone detection using abstract syntax trees}:
 \begin{equation}
-S ~ (L_{\mathcal{P}_i}, M_j) = \frac{2 \cdot N}{2 \cdot N + L + R},
+S ~ (L_{\mathcal{P}_i}, M_j) = \frac{2 N}{2 N + L + R},
 \end{equation}
 где $N$ — число совпадающих узлов, $L$ — число различных узлов в первом поддереве, $R$ — число различных узлов во втором поддереве.
 	\item Построение деревьев производилось с помощью генератора парсеров ANTLR.
@@ -258,6 +339,19 @@ escapeinside={\%*}{*)}   % если нужно добавить коммента
 \end{center}
 \end{frame}
 
+
+
+\begin{frame}
+\frametitle{Терминология}
+\begin{itemize}
+	\item \textit{Дубликаты} -- два функционально эквивалентных фрагмента кода.
+	\item Под \textit{методом} будет подразумеваться один из алгоритмических способов решения конкретной задачи.
+	\item Каждый метод может иметь несколько \textit{мотивов} – конкретных вариантов реализации, которые разрабатываются в зависимости от возможностей вычислительной системы и алгоритма, используемого разработчиком.
+	\item \textit{Код пакета прикладных программ} (код ППП) – реализация пакета прикладных про-
+грамм, в которой необходимо обнаружить дубликат искомого мотива.
+	\item \textit{Шаблон} -- искомый мотив, по которому непосредственно будет осуществляться поиск в коде ППП.
+\end{itemize}
+\end{frame}
 
 
 
